--- a/space.css
+++ b/space.css
@@ -1,13 +1,13 @@
 .laser {
-    /*width : 10px;
-    height : 2px;*/
+    width : 10px;
+    height : 2px;
     background : red;
     position : absolute;    
 }
 
 .meteor {
-   /* width : 20px;
-    height : 20px;*/
+    width : 20px;
+    height : 20px;
     position : absolute;
     background : grey;    
 }
